--- a/gb/news2007_5.md
+++ b/gb/news2007_5.md
@@ -25,7 +25,8 @@
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/8/12/n11448966.md#1" target="_blank">【汉武帝传】之九：“王霸杂用” 制度焕然</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/8/12/n11448966.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/08/415c0d908185fec936288d64d6c20e9e-150x120.jpg" align ="left"></a>历史上很多人对汉武帝有很高的赞誉，其中唐代著名大臣虞世南有一段论述非常有名：“汉武承六世之业，海内殷富，又有高人之资，故能总揽英雄，驾御豪杰，内兴礼乐，外开边境，制度宪章，焕然可述。”几乎将汉武帝的一生功绩做了精彩概括。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月26日 12:57 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/25/n11679594.md#1" target="_blank">五律：秋</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/25/n11679594.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/1707261846022483-150x120.jpg" align ="left"></a>何由萧瑟出，宋玉问悲凉。 月半身披雪，愁多鬓染霜。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月26日 12:06 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/15/n11658469.md#1" target="_blank">舵工谋财害命  数十年后遭报应</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/15/n11658469.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/6dbb4c7f2753c201a6e36d06299fb427-150x120.png" align ="left"></a>享受荣华富贵欢乐数十年，上天等到了这一刻才降灾祸来惩罚他，一家遭到灭顶。陈年往事重演了，……借债借得愈久，而所偿还的利息就需要越多！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月25日 8:34 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/25/n11679403.md#1" target="_blank">青松絮语：被忽略的蓝天</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/25/n11679403.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/12/1811021635502483-150x120.jpg" align ="left"></a>我们会因为专注于某些东西而对另一些东西视而不见、听而不闻。尤其在苦难中，几乎所有的注意力都在眼前的辛苦与对未来的期待上，因而遮罩了很多很美好的东西，就像头顶的蓝天。所以，我们应当提醒自己，无论生活怎样消磨我们的内心，头顶的蓝天一直都在。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月25日 6:15 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/27/n11685298.md#1" target="_blank">童谣：牵牛花</a><br></h3>牵牛花，藤儿长，
+爬上篱笆爬上房。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月28日 1:22 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/25/n11679726.md#1" target="_blank">五律：春</a><br></h3>广袖舞天穹，轻舒煦物风。 婀娜洒青翠，抖擞点丹红。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月28日 12:08 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/25/n11679746.md#1" target="_blank">西江月．怀大志更要拘小节</a><br></h3>邪恶依然存在， 怎能忽略魔情。 辛勤稳重是精英， 谨慎无妨坚定。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月28日 12:04 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/25/n11679748.md#1" target="_blank">七律：永恒</a><br></h3> 利令智昏人欲懵， 不思道义不思惩。 邪魔歪理迷难醒， 地狱列车狂敢登。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月27日 12:05 AM			</td></tr>
