--- a/gb/news392_3.md
+++ b/gb/news392_3.md
@@ -16,10 +16,7 @@
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/3/n11697465.md#1" target="_blank">王友群：中央政法委在香港制造“暴乱”</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/3/n11697465.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/07/1907280059051758-150x120.jpg" align ="left"></a>中共说，香港的“暴乱”是美国的“黑手”和香港的“暴徒”制造出来的。这是彻头彻尾的谎言。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 7:31 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/3/n11697043.md#1" target="_blank">程晓容：中共走进死胡同 新疆香港折射全局</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/3/n11697043.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1912020146081501-150x120.jpg" align ="left"></a>为什么说中共把自己逼入了死胡同？新疆和香港的事态足以说明全局。中共在这两个地区采用了同样性质的统治手段：暴力压制和谎言欺骗。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 5:22 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/3/n11696544.md#1" target="_blank">袁斌：“走投无路”与“难以想像的惊涛骇浪”</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/3/n11696544.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/content_625-44-01-150x120.jpg" align ="left"></a>日前，美国中国问题专家、宾夕法尼亚大学国际关系和中国历史教授林蔚（Arthur Waldron）接受了英文《大纪元时报》“美国思想领袖”节目的专访，谈及中共高层的内部状况，这位美国专家表示，中共政府非常清楚，它已死到临头了。他透露说，一名和习近平关系密切的中共高层幕僚曾坦率地对他说：“林蔚，我们已经走投无路了，每个人都.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 1:14 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/4/n11701366.md#1" target="_blank">吐为快：妖共，我不是你的肉盾</a><br></h3>三年内战人海功，强迫农民阵前冲
-匪欲窃国绑人民，党斗政敌怂群众
-掩耳盗铃欺百姓，掩鼻偷香诬农工
-宪法誉民主人翁，党握权柄独裁疯......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 12:12 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/2/n11696102.md#1" target="_blank">横河评论：王立强投诚为何掀巨浪</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/2/n11696102.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/019-11-2811.32-600x400-150x120.jpg" align ="left"></a>主持人：上个周末，香港的区议会选举是牵动了全世界关注的目光，但是比香港选举更劲爆的是中共特工王立强的投诚，澳大利亚电视台《60分钟》特别节目一播出，就像在中港台投下了一个巨大的震撼弹，引起了舆论沸腾。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 7:34 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/4/n11701121.md#1" target="_blank">宁静：中共改编《天仙配》摧毁孝道败坏人伦</a><br></h3>关于七仙女下嫁凡人董永的传说，是中国古代最重要的神仙故事之一，有着和嫦娥奔月同样的份量。在魏晋时，就已见于曹植的《灵宝篇》和干宝的《搜神记》，从唐代的《董永变文》，到宋元话本《董永遇仙传》、再到明代青阳腔《织锦记》都说的是一样的故事。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 7:28 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/4/n11700683.md#1" target="_blank">渔夫：两个世界的华为（被删网文）</a><br></h3>这个世界上，一定存在着两个华为：一个是孟晚舟的华为，一个是李洪元的华为。孟晚舟的华为有国家大叙事的加持，越来越矫情，也越来越傲娇；李洪元的华为则脱去一切伪装，越来越真实，越来越卑微。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 11:37 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/4/n11699922.md#1" target="_blank">雪绮：亡共大戏中的选择</a><br></h3>特务出逃事件，想必已为“天灭中共”、令世人所深切期待的亡共大戏，揭开了精彩的序幕！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 6:25 PM			</td></tr>
