--- a/gb/nf3046_5.md
+++ b/gb/nf3046_5.md
@@ -19,7 +19,6 @@
 
 目前，越来越多的国家和地区的政府与人民，开始对中共邪恶本质的觉.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年07月13日 9:37 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/7/2/n11358618.md#1" target="_blank">明真相后 大陆公检法人员抛弃中共</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/7/2/n11358618.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/07/image1-150x120.jpeg" align ="left"></a>在澳洲墨尔本，有这样一个团体，他们平和理性、坚忍善良，用20年的时间反抗嗜虐成性的暴政，这个团体就是法轮功。1999年7月20日，中共发动了对信仰“真、善、忍” 的法轮功修炼者的迫害。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年07月06日 12:18 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/7/29/n11415712.md#1" target="_blank">每日三退声明精选（2019/07/28）</a><br></h3>大学时期，被迫入党，1.入党申请书并非本人撰写，是由班级支书在本人不知情的情况下撰写并提交。2.入党宣读时本人为醉酒状态并没有完成宣读过程便中途离场。3.即便是1和2两种情况下还是被入了党。之后了解到该党对我华夏民族的摧残，对中国共产党已经达到厌恶至极的程度，在退党无法的情况，今日特此在这里发表声明，以表退出恶党之态度。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年07月29日 11:25 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/7/27/n11412484.md#1" target="_blank">每日三退声明精选（2019/07/26）</a><br></h3>我是一名退休机关干部，很高兴在外出考察专案过程中，听到三退保平安的事，中共邪党就应了老百姓的话了“见过骗子，但是没见过象中共邪党这样的骗子，见过耍流氓的，没见过中共邪党这样耍流氓的”，眼下香港也乱了，哪里有它，哪里就出事，中共邪党就是流氓就是恶棍，眼下中共邪党就是世界第一贪腐邪党，我听说瑞士银行要对存在那里的中共邪党贪污官员财产曝光，中共邪党的外交部竟然指责.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年07月27日 11:21 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/7/26/n11410074.md#1" target="_blank">每日三退声明精选（2019/07/25）</a><br></h3>前几天从网上下载了VPN，打算翻墙到Youtube看有关最近香港游行的新闻，没想到我无意中还看到了一些有关六四事件的视频，好奇心驱使之下我点进去看了。后来我又一口气看完了很多有关中共的纪录片，以及《九评共产党》的文章。看完之后，我从小到大所坚信的知识都被彻底颠覆了。今天，我终于下定决心，特此与中共划清界限，声明退出共青团！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年07月26日 11:08 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/7/24/n11405499.md#1" target="_blank">每日三退声明精选（2019/07/23）</a><br></h3>很多人在学校时候受过洗脑，甚至入党都是内部推荐，引以为“荣”，后来步入社会，学会独立思考。越来越觉得以前受之迷惑，但是我相信很多党员都是无辜的，大部分做坏事的都是体制内的人，像我们这些体制外的党员大部分并不坏，更没有做过坏事，甚至很多心存善念，希望迎来民主。也希望你们能为民主事业做更多贡献，早日搞走黑暗和魔鬼。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年07月24日 11:52 AM							</td></tr>
@@ -43,5 +42,6 @@
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/7/3/n11360910.md#1" target="_blank">每日三退声明精选（2019/07/02）</a><br></h3>学生时代接受洗脑教育，随流加入少先队和共青团，参加工作后，受单位引诱加入共产党。随着年龄和学识的增长，乃知共产党是与自由、民主、文明、宪政等普世价值水火不融的，是一个虚伪邪恶的组织，是中国人民苦难的根源，是必须彻底铲除的毒瘤。今天中共正在大庆建党98周年，我却选择这一天郑重声明：退出共产党、共青团、少先队，彻底划清界限！彻底自新！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年07月03日 11:44 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/7/2/n11358715.md#1" target="_blank">每日三退声明精选（2019/07/01）</a><br></h3>我是一名中共党员，特别在文化大革命后认识了中共本质。我很后悔参加了这样一个组织。中共数十年来好话说尽，坏事做绝。完全成为一个邪恶的的组织。把人民和老百姓当作敌人。处处坑害人民，贪污腐败成风，国家完全被利益集团左右。在中国，没有自由，没有平等，没有法制，在互联网上构筑了一个无比恐怖的墙。只许听谎言，不准说真话。我坚决退出共产党组织，从灵魂上与魔鬼划清界线。为中.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年07月02日 10:50 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/7/1/n11356310.md#1" target="_blank">每日三退声明精选（2019/06/30）</a><br></h3>学生时代，莫名被加入共青团组织，如今我了解了真相，声明退出共青团。我爱我们的国家，但不爱党。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年07月01日 11:39 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/6/30/n11354808.md#1" target="_blank">每日三退声明精选（2019/06/29）</a><br></h3>中国共产党七十年来杀人无数，文革六四法轮功，新疆的再教育营关押了上百万维吾尔族人，人脸辨视，身份证定位....，想对每个中国人监控，这样的政党想想也够可怕的，什么事做不出来呢？只有在中国的老百姓才受骗，在此声明退出共产党团队，去兽记，和这个双手沾满中国人鲜血的党决裂，永无瓜葛！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年06月30日 11:20 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/nf3046_4.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/rywys229/djy/blob/master/gb/nf3046.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/rywys229/djy/blob/master/gb/nf3046_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/rywys229/djy/blob/master/gb/nf3046_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/rywys229/djy/blob/master/gb/nf3046_4.md#1">4</a>&nbsp;&nbsp;5&nbsp;&nbsp;<a href="https://github.com/rywys229/djy/blob/master/gb/nf3046_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/rywys229/djy/blob/master/gb/nf3046_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/rywys229/djy/blob/master/gb/nf3046_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/rywys229/djy/blob/master/gb/nf3046_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/rywys229/djy/blob/master/gb/nf3046_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/rywys229/djy/blob/master/gb/nf3046_6.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/rywys229/djy/blob/master/gb/nf3046_5.md#1<br><a href="https://github.com/rywys229/djy/blob/master/gb/nf3046_5.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/rywys229/djy/blob/master/gb/nf3046_5.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/nf3046_5.htm">http://www.epochtimes.com/gb/nf3046_5.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
